--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+/* ./src/index.scss */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
